--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commit": "a63a770ea33332882790401851df337734b0b734"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "jest": "^29.5.0"
   },
   "scripts": {
